src/App.css
.App {
  display: block;
  text-align: center;
  margin: 40px;
  height: 100%;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.subtitle {
  display: flex;
  font-size: 30px;
  margin: 30px;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.sidebar-container {
  display: flex;
  width: 100%;
  height: 100%;
}

.sideBar {
  min-width: 400px;
  height: 100%;
}

.sideBar-item {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  background-color: #263fbd;
  color: white;
  padding: 35px;
  font-size: x-large;
  cursor: pointer;
  height: 100%;
}

.sideBar-item:hover {
  background-color: #1832b6;
}

.sideBar-item:active {
  background-color: #0f26a1;
}

.sideBar-item.active {
  background-color: red;
}

.sideBar-item-modal {
  display: flex;
  background-color: #0d2abb;
  color: white;
  padding: 35px;
  width: 100%;
  justify-content: center;
  align-items: center;
  font-size: x-large;
  border-top-right-radius: 5%;
  border-bottom-right-radius: 5%;
}


.sideBar-item-modal > button {
  margin: 10px;
}

/* The gray part of the bar. */
.container {
  background-color: rgb(200, 199, 199);
  width: 90%;
  height: 15px;
  border-radius: 50px;
  box-shadow: 0px 0px 5px #000;
}

.line {
  white-space: pre-line;
}

.graph-container {
  width: 100%;
  height: 100%;
}

